--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Incremental</title>
-    <style>
-        body {
-            background: black;
-            color: white;
-            font-family: Arial;
-            text-align: center;
-            margin-top: 40px;
-        }
-        button {
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 18px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Simple Incremental</title>
+<style>
+body {
+    background: black;
+    color: white;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding: 40px;
+}
+button {
+    background: red;
+    border: none;
+    color: white;
+    padding: 15px 30px;
+    font-size: 20px;
+    margin: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.stats {
+    font-size: 18px;
+    margin: 10px;
+}
+</style>
 </head>
 <body>
 
-    <h1>Simple Incremental</h1>
-    <p>Points: <span id="points">0</span></p>
+<h1>Simple Incremental</h1>
 
-    <button onclick="clickGain()">Click</button>
-    <br>
+<p class="stats">Points: <span id="points">0</span></p>
+<p class="stats">Reboot Points: <span id="rebootPoints">0</span></p>
 
-    <button onclick="buyClickUpgrade()">Upgrade: +1 per click (Cost: <span id='clickCost'>10</span>)</button>
-    <br>
+<button onclick="clickPoints()">Click!</button><br>
 
-    <button onclick="buyAuto()">Upgrade: +1 per second (Cost: <span id='autoCost'>25</span>)</button>
-    <br>
+<button onclick="buyClickUpgrade()">Upgrade: +1 per click (<span id="clickCost">10</span>)</button><br>
+<button onclick="buyAuto()">Upgrade: +1 per second (<span id="autoCost">25</span>)</button><br>
+<button onclick="buyRebootUpgrade()">Reboot Upgrade (+1 permanent boost) (<span id='rebootUpgradeCost'>5</span> RP)</button><br>
 
-    <button onclick="reboot()">Reboot (Reset for Reboot Points)</button>
-    <p>Reboot Points: <span id="rebootPoints">0</span></p>
+<button onclick="reboot()">Reboot (Reset for Reboot Points)</button>
 
 <script>
+// =================== GAME DATA ===================
 let points = 0;
 let pointsPerClick = 1;
 let pointsPerSecond = 0;
@@ -45,21 +54,46 @@ let clickCost = 10;
 let autoCost = 25;
 
 let rebootPoints = 0;
+let rebootUpgradeLevel = 0;
+let rebootUpgradeCost = 5;
 
-function update() {
-    document.getElementById("points").innerText = points;
-    document.getElementById("clickCost").innerText = clickCost;
-    document.getElementById("autoCost").innerText = autoCost;
-    document.getElementById("rebootPoints").innerText = rebootPoints;
+// Load from localStorage
+if(localStorage.getItem("simpleIncrementalData")){
+    const data = JSON.parse(localStorage.getItem("simpleIncrementalData"));
+    points = data.points;
+    pointsPerClick = data.pointsPerClick;
+    pointsPerSecond = data.pointsPerSecond;
+    clickCost = data.clickCost;
+    autoCost = data.autoCost;
+    rebootPoints = data.rebootPoints;
+    rebootUpgradeLevel = data.rebootUpgradeLevel;
+    rebootUpgradeCost = data.rebootUpgradeCost;
 }
 
-function clickGain() {
-    points += pointsPerClick;
+// =================== UPDATE UI ===================
+function update() {
+    document.getElementById("points").innerText = formatNumber(points);
+    document.getElementById("clickCost").innerText = formatNumber(clickCost);
+    document.getElementById("autoCost").innerText = formatNumber(autoCost);
+    document.getElementById("rebootPoints").innerText = rebootPoints;
+    document.getElementById("rebootUpgradeCost").innerText = rebootUpgradeCost;
+    saveGame();
+}
+
+// =================== FORMATTING ===================
+function formatNumber(num){
+    if(num < 1000000) return num;
+    return num.toExponential(2); // scientific notation for big numbers
+}
+
+// =================== CLICK & UPGRADES ===================
+function clickPoints() {
+    points += pointsPerClick + rebootUpgradeLevel;
     update();
 }
 
 function buyClickUpgrade() {
-    if (points >= clickCost) {
+    if(points >= clickCost){
         points -= clickCost;
         pointsPerClick += 1;
         clickCost = Math.floor(clickCost * 1.5);
@@ -68,7 +102,7 @@ function buyClickUpgrade() {
 }
 
 function buyAuto() {
-    if (points >= autoCost) {
+    if(points >= autoCost){
         points -= autoCost;
         pointsPerSecond += 1;
         autoCost = Math.floor(autoCost * 1.6);
@@ -76,27 +110,52 @@ function buyAuto() {
     }
 }
 
-setInterval(() => {
-    points += pointsPerSecond;
-    update();
-}, 1000);
+function buyRebootUpgrade(){
+    if(rebootPoints >= rebootUpgradeCost){
+        rebootPoints -= rebootUpgradeCost;
+        rebootUpgradeLevel += 1;
+        rebootUpgradeCost = Math.floor(rebootUpgradeCost * 1.8);
+        update();
+    }
+}
 
-function reboot() {
-    if (points >= 1000) {
+// =================== AUTO INCREMENT ===================
+setInterval(()=>{
+    points += pointsPerSecond + rebootUpgradeLevel;
+    update();
+},1000);
+
+// =================== REBOOT ===================
+function reboot(){
+    if(points >= 1000){
         rebootPoints += 1;
         points = 0;
         pointsPerClick = 1;
         pointsPerSecond = 0;
-
         clickCost = 10;
         autoCost = 25;
-
         update();
     } else {
         alert("You need 1000 points to reboot!");
     }
 }
 
+// =================== SAVE GAME ===================
+function saveGame(){
+    const data = {
+        points,
+        pointsPerClick,
+        pointsPerSecond,
+        clickCost,
+        autoCost,
+        rebootPoints,
+        rebootUpgradeLevel,
+        rebootUpgradeCost
+    };
+    localStorage.setItem("simpleIncrementalData", JSON.stringify(data));
+}
+
+// =================== INITIALIZE ===================
 update();
 </script>
 
